WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51904
[GTK] Freetype backend does not support WOFF
https://bugs.webkit.org/show_bug.cgi?id=51904
Summary
[GTK] Freetype backend does not support WOFF
Martin Robinson
Reported
2011-01-04 15:31:13 PST
The Freetype backend does not support WOFF. See here for more information:
http://en.wikipedia.org/wiki/Web_Open_Font_Format
Attachments
Patch
(15.42 KB, patch)
2011-01-04 15:58 PST
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-01-04 15:58:49 PST
Created
attachment 77941
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-01-06 12:08:09 PST
Comment on
attachment 77941
[details]
Patch I assume WOFFileFormat.* already exists in the repo? Also, the EFL builder failed...
Martin Robinson
Comment 3
2011-01-06 13:31:04 PST
(In reply to
comment #2
)
> (From update of
attachment 77941
[details]
) > I assume WOFFileFormat.* already exists in the repo? Also, the EFL builder failed...
Thanks for the review! These files already exist. I will add them to the CMake sources list before landing. That should fix the EFL build.
Martin Robinson
Comment 4
2011-01-06 15:05:35 PST
Committed
r75202
: <
http://trac.webkit.org/changeset/75202
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug