2011-01-06  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Eric Seidel.

        [GTK] Freetype backend does not support WOFF
        https://bugs.webkit.org/show_bug.cgi?id=51904

        * platform/gtk/Skipped: Unskip passing WOFF test. Add results.
        * platform/gtk/fast/css/font-face-woff-expected.checksum: Added.
        * platform/gtk/fast/css/font-face-woff-expected.png: Added.
        * platform/gtk/fast/css/font-face-woff-expected.txt: Added.
2011-01-06  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Eric Seidel.

        [GTK] Freetype backend does not support WOFF
        https://bugs.webkit.org/show_bug.cgi?id=51904

        * CMakeListsEfl.txt: Add WOFF support to the sources list.
        * GNUmakefile.am: Add WOFF support to the sources list.
        * platform/graphics/freetype/FontCustomPlatformDataFreeType.cpp:
        (WebCore::createFontCustomPlatformData): Call the WOFF decoder when appropriate.
        (WebCore::FontCustomPlatformData::supportsFormat): Advertise support for WOFF.

Canonical link: https://commits.webkit.org/65523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75202 268f45cc-cd09-0410-ab3c-d52691b4dbfc